made other pages and added some info to profile

--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,29 @@
-DOCTYPE! html
+<!DOCTYPE html>
 <head>
-
+<p>
+    <h2>Profile</h2>
+    <h3>Op deze pagina staat wat informatie over mij.</h3>
+</p>
 
 </head>
 
 <body>
+<p>
+    Mijn naam is Dave Elshout en ik kom uit het dorpje Yerseke. 
+    <br>
+    Ik ben 18 en mijn hobbies liggen vooral in;
+    <ul>
+        <li>Gamen</li>
+        <li>Computers</li>
+        <li> Alternatieve muziek</li>
+        <li></li>  
+    </ul>
+<img src=https://images-na.ssl-images-amazon.com/images/I/81lrF8AR%2BtL._SX425_.jpg>
+    
+<br>
+Verder vind ik het leuk om te coderen, en te werken met arduino. 
 
+
+</p>
 
 </body>
