made progress to all pages and added navbar

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <head>
-    <p>
-        <h2>
-           Personal dashboard
-        </h2>
-
-
-    </p>
+    <link rel="stylesheet" href="opmaak.css" id="bootstrap-css">
+    <title>Personal dashboard</title> 
 </head>
-<body>
 
+<body>
+    <div class="navbar">
+        <a href="index.html">home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Informatie
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="profile.html">Profile</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+        </div>
+    </div>
 
 </body>
