--- a/inex.html
+++ b/inex.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="opmaak.css" id="bootstrap-css">
+    <title>Startpagina</title>
+ 
+</head>
+<body>
+    <div class="navbar">
+        <a href="index.html">home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Informatie
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="profile.html">Profile</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+        </div>
+    </div>
     <p>
-        <h2>
-            Landing page
-        </h2>
+        Waarom past het hbo bij mij?
+        <br> HBO past het beste bij mij 
 
 
     </p>
-</head>
-<body>
-
-
 </body>
