--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <head>
-<p>
-    <h2>Profile</h2>
-    <h3>Op deze pagina staat wat informatie over mij.</h3>
-</p>
-
+    <link rel="stylesheet" href="opmaak.css" id="bootstrap-css">
 </head>
 
 <body>
+    <div class="navbar">
+        <a href="index.html">home</a>
+        <div class="dropdown">
+            <button class="dropbtn">Informatie
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="profile.html">Profile</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+        </div>
+    </div>
 <p>
+    <p>
+        <title>Profile</title>
+        <h3>Op deze pagina staat wat informatie over mij.</h3>
+    </p>
     Mijn naam is Dave Elshout en ik kom uit het dorpje Yerseke. 
     <br>
     Ik ben 18 en mijn hobbies liggen vooral in;
@@ -21,7 +34,8 @@
 <img src=https://images-na.ssl-images-amazon.com/images/I/81lrF8AR%2BtL._SX425_.jpg>
     
 <br>
-Verder vind ik het leuk om te coderen, en te werken met arduino. 
+Verder vind ik het leuk om te coderen, en te werken met arduino. Dit heeft mij ervaring gegeven in C++
+Daarnaast heb ik O&O gedaan op de middelbare school, wat mij ervaring heeft gegeven in werken in team verband.
 
 
 </p>
