--- a/faq.html
+++ b/faq.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="opmaak.css" id="bootstrap-css">
-    <title>Frequently Asked Questions</title> 
-</head>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css" id="bootstrap-css">
+        <title>Frequently Asked Questions</title> 
+    </head>
 
-<body>
-    <div class="navbar">
-        <a href="index.html">home</a>
-        <div class="dropdown">
-            <button class="dropbtn">Informatie
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="profile.html">Profile</a>
-                <a href="dashboard.html">Dashboard</a>
-                <a href="faq.html">FAQ</a>
+    <body>
+        <div class="navbar">
+            <a href="index.html">home</a>
+            <div class="dropdown">
+                <button class="dropbtn">Informatie
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="profile.html">Profile</a>
+                    <a href="dashboard.html">Dashboard</a>
+                    <a href="faq.html">FAQ</a>
+                </div>
             </div>
         </div>
-    </div>
+        <div>
+            <h2>Frequently Asked Questions</h2>
+        </div>
 
-</body>
+    </body>
+</html>
