--- a/index-test.html
+++ b/index-test.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css" id="bootstrap-css">
+        <link rel="stylesheet" href="style-test.css">
         <title>Startpagina</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
  
     </head>
     <body>
-        <li class="nav-item dropdown">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="profile.html">Profile</a>
+            <a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-item nav-link" href="faq.html">FAQ</a>
+          </div>
+        </div>
+      </nav>
+       <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -19,6 +32,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+          --> 
 <!--        <p>
             Waarom past het hbo bij mij?
             <br> HBO past het beste bij mij 
@@ -27,22 +41,6 @@
             <h1>Welcome to the Landing Page!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
         </div>
-        <!--<div class="container features">
-            <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="img_lights.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="img_lights.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-12">        
-              </div>
-            </div> 
-        </div>-->
 
     </body>
 </html>
