--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style-test.css">
+        <link rel="stylesheet" href="style.css">
         <title>Startpagina</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -24,25 +24,16 @@
         </div>
       </nav>
        
-      <div class="container">
+      <div class="container" style="color:black;">
         <div class="row">
             <div class="col-sm-12">
-                <p class="my-5"><a href="https://www.solodev.com"><img src="https://raw.githubusercontent.com/solodev/expanding-faq-tabs/master/solodev-logo.png" alt="logo" class="img-fluid d-block mx-auto"/></a></p>
+                <p><h2>Frequently Asked Questions</h2></p>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <ul class="nav nav-tabs">
-                    <li ><a data-toggle="tab" href="#tab1" aria-selected="true" class="active">Infrastructure</a></li>
-                    <li><a data-toggle="tab" href="#tab2" aria-selected="false">About Solodev</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                
+            <div class="col-sm-12"> 
                 <div class="tab-content">
-                    <div id="tab1" class="tab-pane fade show active">
+                    <div id="tab" class="tab-pane fade show active">
                         <div class="accordion">
                             <div class="card">
                                 <div class="card-header" id="infraOne">
@@ -83,48 +74,8 @@
                                 </div>
                             </div><!-- card-->
                         </div><!-- accordion-->
-                    </div><!-- tab 1-->
-                <div id="tab2" class="tab-pane fade">
-                    <div class="accordion">
-                        <div class="card">
-                            <div class="card-header" id="aboutOne">
-                                <a href="#collapseFour"   data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseOne">
-                                    <p class="mb-0">What are the benefits of Solodev CMS?</p>
-                                </a>
-                            </div>
-                            <div id="collapseFour" class="collapse" aria-labelledby="aboutOne" data-parent="#accordion">
-                                <div class="card-body">
-                                With Solodev CMS, you and your visitors will benefit from a finely-tuned technology stack that drives the highest levels of site performance, speed and engagement - and contributes more to your bottom line. 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="aboutTwo">
-                                <a href="#collapseFive" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
-                                  <p class="mb-0">How easy is it to build a website with Solodev CMS?</p>
-                                </a>
-                            </div>
-                            <div id="collapseFive" class="collapse" aria-labelledby="aboutTwo" data-parent="#accordion">
-                                <div class="card-body">
-                                Building a website is extremely easy. With a working knowledge of HTML and CSS you will be able to have a site up and running in no time.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="aboutThree">
-                                <a href="#collapseSix" class="collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
-                                  <p class="mb-0">Can I get a personalized demonstration of Solodev CMS?</p>
-                                </a>
-                            </div>
-                            <div id="collapseSix" class="collapse" aria-labelledby="aboutThree" data-parent="#accordion">
-                                <div class="card-body">
-                                Yes, click here to request a demo and one of our representatives will contact you shortly to setup a time convenient to you.
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- accordion-->
-                </div><!-- tab2 -->
-              </div><!-- tab content-->
+                    </div><!-- tab -->
+                </div>
             </div>
         </div>
     </div>
