--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style-test.css">
+        <link rel="stylesheet" href="style.css">
         <title>Startpagina</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -22,11 +22,11 @@
         </div>
       </nav>
         <p>
-            <p>
+            
                 <title>Profile</title>
                 <h1> Profile page</h1>
                 <h3>Op deze pagina staat wat informatie over mij.</h3>
-            </p>
+            
             Mijn naam is Dave Elshout en ik kom uit het dorpje Yerseke. 
             <br>
             Ik ben 18 en mijn hobbies liggen vooral in;
