changed a fucktonne of shit but it better now

--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
             <h1>Welcome to the Landing Page!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
         </div>
-        <div class="container features bg-white">
+        <div class="center container bg-dark rounded">
+          <div class="text-light">
             <div class="row">
               <div class="col-lg-6 col-md-4 col-sm-12">
                 <h3 class="feature-title">Lorem ipsum</h3>
                 <img src="img_lights.jpg" class="img-fluid center">
-                <p class="text-dark text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <p class="text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
               </div>
               <div class="col-lg-6 col-md-4 col-sm-12">
                 <h3 class="feature-title">Lorem ipsum</h3>
                 <img src="img_lights.jpg" class="img-fluid">
-                <p class="text-dark text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <p class="text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-12">        
-              </div>
+
             </div> 
+          </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
