fixed sidebar on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -37,14 +37,12 @@
       <div class="row">
          <div class="col-3 bg-dark" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
             <h4>Personal Dashboard</h4>
-            <ul>
-               <li><a href="https://learn.hz.nl/" target="_blank">Learn.hz</a></li>
-               <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus"target="_blank">Studievoortgang</a></li>
-               <li><a href="https://teams.microsoft.com/_#/school//?ctx=teamsGrid"target="_blank">Teams</a></li>
-               <li><a href="https://hz.nl/uploads/documents/Regelingen/EN/OER-HZ-2019-2020werkdocv2018-05-17DEF_ENGELS-AC-29112019.pdf" target="_blank">CER van HZ</a></li>
-               <li><a href="https://github.com/LucaGeene"target="_blank">Github van Luca</a></li>
-               <li><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf"target="_blank">IR van HZ, studie HBO-ICT</a></li>
-             </ul>
+            <a href="https://learn.hz.nl/" class="btn btn-primary btn-lg active" target="_blank">Learn.hz</a><br>
+            <a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" class="btn btn-primary btn-lg active" target="_blank">Studievoortgang</a> <br>
+            <a href="https://teams.microsoft.com/_#/school//?ctx=teamsGrid" class="btn btn-primary btn-lg active" target="_blank">Teams</a><br>
+            <a href="https://hz.nl/uploads/documents/Regelingen/EN/OER-HZ-2019-2020werkdocv2018-05-17DEF_ENGELS-AC-29112019.pdf" class="btn btn-primary btn-lg active" target="_blank">CER van HZ</a><br>
+            <a href="https://github.com/DaveElshout" class="btn btn-primary btn-lg active" target="_blank">Github van Dave</a><br>
+            <a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf" class="btn btn-primary btn-lg active" target="_blank">IR van HZ, studie HBO-ICT</a><br>
          </div>
          <div class="col-1"></div>
          <div class="col-xl-8">
@@ -203,7 +201,7 @@
             <div class="container">
                <h2>Propedeuse Voortgang</h2>
                <div class="progress">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="60"
+                  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"
                      style="width:50%">
                      50%
                   </div>
