cleaned code, added comments, added reviews and images. Finished dashboard and faq

--- a/profile.html
+++ b/profile.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
+  <!---->
   <link rel="stylesheet" href="style.css">
   <title>Startpagina</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="https://use.fontawesome.com/30c21ac8e0.js"></script>
 
 </head>
 
 <body>
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +27,7 @@
       </div>
     </div>
   </nav>
-  
+  <!--Navbar-->
   <br>
   <br>
 
@@ -55,7 +56,117 @@
       </p>
     </div>
   </div>
-
+  <div class="container pt-5 center" ;>
+    <div class="row"><h2>Reviews</h2></div>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile3.jfif">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>Moonlightning</h4>
+          420 minuten geleden.
+        <br><br>
+          Tall AF.
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container pt-5 center" ;>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile1.png">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>Ramones</h4>
+          2 dagen geleden.
+        <br><br>
+          Wait this isn't Wendy's.
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container pt-5 center" ;>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile2.png">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>The Hound</h4>
+          3 dagen geleden.
+        <br><br>
+          6/10 <br> food is great. There is a weird waiter called Dave and he is kinda ugly but very funny.
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container pt-5 center" ;>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile6.jpg">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>im.not.chicken.LITTLE</h4>
+          3 weken.
+        <br><br>
+          Hi, welcome to Chili's
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container pt-5 center" ;>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile5.jpg">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>RandomSessie</h4>
+          666 weken geleden.
+        <br><br>
+          long hair, graet for sniffin'
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container pt-5 center" ;>
+    <div class="row border">
+      <div class="col- stackem">
+        <img class="profile-photo" src="images\profile4.jpg">
+        <div></div>
+      </div>
+      <div class="col-10 stackem">
+        <br>
+        <h4>that red guy</h4>
+          9999 dagen geleden.
+        <br><br>
+          Noot Noot
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  
 </body>
 
 </html>
