--- a/faq.html
+++ b/faq.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="https://use.fontawesome.com/30c21ac8e0.js"></script>
  
     </head>
     <body>
+        <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
           </div>
         </div>
       </nav>
-       
+       <!--Navbar-->
       <div class="container" style="color:black;">
         <div class="row">
             <div class="col-sm-12">
@@ -31,97 +31,85 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12"> 
-                <div class="tab-content">
-                    <div id="tab" class="tab-pane fade show active">
-                        <div class="accordion">
-                            <div class="card">
-                                <div class="card-header" id="infraOne">
-                                    <a href="#collapseOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                        <p class="mb-0">
-                                            Hoe kan je bij HZ vanaf je laptop printen?
-                                        </p>
-                                    </a>
-                                </div>
-                                <div id="collapseOne" class="collapse" aria-labelledby="infraOne" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Als je op het Eduroam netwerk zit kan je vanuit je instellingen een printer toevoegen. De HZ printer staat dan als optie om toe te voegen. Als je de printer toegevoegd hebt dan kan je de printer selecteren en iets afdrukken met je HZ pas.
-                                    </div>
-                                </div>
-                            </div><!-- close card-->
-                            <div class="card">
-                                <div class="card-header" id="infraTwo">
-                                    <a href="#collapseTwo" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        <p class="mb-0">
-                                            Hoe kan je bij HZ een document naar je laptop scannen?     
-                                        </p>
-                                    </a>
-                                </div>
-                                <div id="collapseTwo" class="collapse" aria-labelledby="infraTwo" data-parent="#accordion">
-                                    <div class="card-body">
-                                         Als je verbonden bent met de printer kan je je HZ pas scannen en dan met de printer inscannen. Het PDF bestand zou automatisch op je computer moeten komen.
-                                    </div>
-                                </div>
-                            </div><!-- card-->
-                            <div class="card">
-                                <div class="card-header" id="infraThree">
-                                    <a href="#collapseThree" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        <p class="mb-0">
-                                            Wat moet je doen als je ziek bent/coronaklachten hebt?
-                                        </p>
-                                    </a>
-                                </div>
-                                <div id="collapseThree" class="collapse" aria-labelledby="infraThree" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Als je ziek bent of coronaklachten hebt moet je absoluut niet naar school komen en je docent via Teams op de hoogte stellen. Zorg dat je alle lessen blijft volgen om niet achter te gaan lopen. Ook kan je je laten testen op Covid-19 bij de GGD.
-                                    </div>
-                                </div>
-                            </div><!-- card-->
-                            <div class="card">
-                                <div class="card-header" id="infraFour">
-                                    <a href="#collapseFour" class="collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                        <p class="mb-0">
-                                            Hoe kan je een projectruimte reserveren op de HZ?
-                                        </p>
-                                    </a>
-                                </div>
-                                <div id="collapseFour" class="collapse" aria-labelledby="infraFour" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Als je inlogt op MyHZ kan je via je Persoonlijk Menu naar Selfservice Portal gaan. Vanuit hier kan je een nieuwe reservering aanvragen. Hierna kies je een tijdspan voor wanneer je de ruimte wil huren en ben je klaar.
-                                    </div>
-                                </div>
-                            </div><!-- card-->
-                            <div class="card">
-                                <div class="card-header" id="infraFive">
-                                    <a href="#collapseFive" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                        <p class="mb-0">
-                                            Wat zijn de instructies voor parkeren op de HZ parkeerplaats?
-                                        </p>
-                                    </a>
-                                </div>
-                                <div id="collapseFive" class="collapse" aria-labelledby="infraFive" data-parent="#accordion">
-                                    <div class="card-body">
-                                        Je moet langs gaan bij de receptie om aan te vragen om te parkeren. Vervolgens moet je 'tegenover' de school parkeren bij het vormalige PEZM. Hier zijn speciaal plekken gereserveerd voor HZ studenten en docenten, deze zijn aangegeven door middel van een bordje.
-                                    </div>
-                                </div>
-                           
-                            <div class="card">
-                                <div class="card-header" id="infraSix">
-                                    <a href="#collapseSix" class="collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                        <p class="mb-0">vraag6</p>
-                                    </a>
-                                </div>
-                                <div id="collapseSix" class="collapse" aria-labelledby="infraSix" data-parent="#accordion">
-                                    <div class="card-body">
-                                   antwoord 6
-                                    </div>
-                                </div>
-                            </div><!-- card-->
-                        </div><!-- accordion-->
-                    </div><!-- tab -->
-                </div>
+            <div class="col-sm-12">
+                <div class="accordion">
+                    <div class="card">
+                        <div class="card-header" id="infraOne">
+                            <a href="#collapseOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                <p class="mb-0">
+                                    Hoe kan je bij HZ vanaf je laptop printen?
+                                </p>
+                            </a>
+                        </div>
+                        <div id="collapseOne" class="collapse" aria-labelledby="infraOne" data-parent="#accordion">
+                            <div class="card-body">
+                                <a href="https://print.hz.nl">print.hz.nl</a>
+                            </div>
+                        </div>
+                    </div><!-- close card-->
+                    <div class="card">
+                        <div class="card-header" id="infraTwo">
+                            <a href="#collapseTwo" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <p class="mb-0">
+                                    Hoe kan je bij HZ een document naar je laptop scannen?     
+                                </p>
+                            </a>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="infraTwo" data-parent="#accordion">
+                            <div class="card-body">
+                                 Als je verbonden bent met de printer kan je je HZ pas scannen en dan met de printer inscannen. Het PDF bestand zou automatisch op je computer moeten komen.
+                            </div>
+                        </div>
+                    </div><!-- card-->
+                    <div class="card">
+                        <div class="card-header" id="infraThree">
+                            <a href="#collapseThree" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <p class="mb-0">
+                                    Wat moet je doen als je ziek bent/coronaklachten hebt?
+                                </p>
+                            </a>
+                        </div>
+                        <div id="collapseThree" class="collapse" aria-labelledby="infraThree" data-parent="#accordion">
+                            <div class="card-body">
+                                Als je ziek bent of coronaklachten hebt moet je absoluut niet naar school komen en je docent via Teams op de hoogte stellen. Zorg dat je alle lessen blijft volgen om niet achter te gaan lopen. Ook kan je je laten testen op Covid-19 bij de GGD.
+                            </div>
+                        </div>
+                    </div><!-- card-->
+                    <div class="card">
+                        <div class="card-header" id="infraFour">
+                            <a href="#collapseFour" class="collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <p class="mb-0">
+                                    Hoe kan je een projectruimte reserveren op de HZ?
+                                </p>
+                            </a>
+                        </div>
+                        <div id="collapseFour" class="collapse" aria-labelledby="infraFour" data-parent="#accordion">
+                            <div class="card-body">
+                                Als je inlogt op MyHZ kan je via je Persoonlijk Menu naar Selfservice Portal gaan. Vanuit hier kan je een nieuwe reservering aanvragen. Hierna kies je een tijdspan voor wanneer je de ruimte wil huren en ben je klaar.
+                            </div>
+                        </div>
+                    </div><!-- card-->
+                    <div class="card">
+                        <div class="card-header" id="infraFive">
+                            <a href="#collapseFive" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                <p class="mb-0">
+                                    Wat zijn de instructies voor parkeren op de HZ parkeerplaats?
+                                </p>
+                            </a>
+                        </div>
+                        <div id="collapseFive" class="collapse" aria-labelledby="infraFive" data-parent="#accordion">
+                            <div class="card-body">
+                                Je moet langs gaan bij de receptie om aan te vragen om te parkeren. Vervolgens moet je 'tegenover' de school parkeren bij het vormalige PEZM. Hier zijn speciaal plekken gereserveerd voor HZ studenten en docenten, deze zijn aangegeven door middel van een bordje.
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- accordion-->    
             </div>
         </div>
     </div>
+
+
+
+
     </body>
 </html>
