--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> 
     </head>
     <body>
+      <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -19,25 +20,25 @@
           </div>
         </div>
       </nav>
-<!--        <p>
-            Waarom past het hbo bij mij?
-            <br> HBO past het beste bij mij 
-        </p>-->
+      <!--Navbar-->
+
         <div class="container">
-            <h1>Welcome to the Landing Page!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+            <h1>Welkom op de Home pagina!</h1>
+            <p>Dit is de website van Dave Elshout.</p>
         </div>
+        <br>
         <div class="center container bg-dark rounded">
           <div class="text-light">
             <div class="row">
               <div class="col-lg-6 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="img_lights.jpg" class="img-fluid center">
-                <p class="text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <h3 class="feature-title">Waarom past de onderwijsvorm HBO het beste bij mij?</h3>
+                <div></div>
+                <img src="images\index1.png" class="img-fluid center">
+                <p class="text-center lead"> Voor deze opleiding heb ik de Havo gedaan, hier heb ik ook een diploma van. Voor mij persoonlijk is het WO/Vwo altijd te moeilijk geweest, ook is dit voor mij te theoretish. Daarnaast is het MBO heel makkelijk en zeer practisch onderwijs, wat ik ook niet wil. Voor mij is HBO een uitdagend leerniveau, die een goede mix tussen theoretish en practisch onderwijs bevat.</p>
               </div>
               <div class="col-lg-6 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="img_lights.jpg" class="img-fluid">
+                <h3 class="feature-title">Waarom past deze opleiding het beste bij mij?</h3>
+                <img src="images\index2.jpg" class="img-fluid center">
                 <p class="text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
               </div>
 
