--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
                 <h3 class="feature-title">Waarom past de onderwijsvorm HBO het beste bij mij?</h3>
                 <div></div>
                 <img src="images\index1.png" class="img-fluid center">
-                <p class="text-center lead"> Voor deze opleiding heb ik de Havo gedaan, hier heb ik ook een diploma van. Voor mij persoonlijk is het WO/Vwo altijd te moeilijk geweest, ook is dit voor mij te theoretish. Daarnaast is het MBO heel makkelijk en zeer practisch onderwijs, wat ik ook niet wil. Voor mij is HBO een uitdagend leerniveau, die een goede mix tussen theoretish en practisch onderwijs bevat.</p>
+                <p class="text-center lead"> 
+                  voordat ik met deze opleiding begon heb ik mijn HAVO diploma gehaald (op het Pontes lyceum Goes). Voor mij persoonlijk is het WO/Vwo altijd te moeilijk geweest, ook is dit voor mij te theoretish. Daarnaast is het MBO heel makkelijk en zeer practisch onderwijs, wat ik ook niet wil. Voor mij is HBO een uitdagend leerniveau, die een goede mix tussen theoretish en practisch onderwijs bevat.</p>
               </div>
               <div class="col-lg-6 col-md-4 col-sm-12">
                 <h3 class="feature-title">Waarom past deze opleiding het beste bij mij?</h3>
                 <img src="images\index2.jpg" class="img-fluid center">
-                <p class="text-center lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <p class="text-center lead">De opleiding past bij mij omdat het een opleiding is die in mijn interesses ligt, er is veel baankans en je kan in heel veel verschillende richtingen gaan qua waar je werkt.<br> Hiernaast heb ik al enige ervaring met ICT gerelateerde dingen zoals web design en Arduino.</p>
               </div>
 
             </div> 
