--- a/profile.html
+++ b/profile.html
@@ -38,17 +38,19 @@
       <h1> Profile page</h1>
       <h3>Op deze pagina staat wat informatie over mij.</h3>
 
-      <p class="blockquote"> Mijn naam is Dave Elshout en ik kom uit het dorpje Yerseke. </p>
-      <br>
-      <p> Ik ben 18 en mijn hobbies liggen vooral in; </p>
-      <ul>
+      <p class="blockquote"> Mijn naam is Dave Elshout en ik kom uit het dorpje Yerseke. 
+      <br><br>
+      Ik ben 18 jaar en mijn hobbies liggen vooral in; </p>
+      <ul class="blockquote">
         <li>Gamen</li>
         <li>Computers</li>
-        <li> Alternatieve muziek</li>
-        <li></li>
+        <li> Alternatieve muziek;</li>
       </ul>
-      <img src=https://images-na.ssl-images-amazon.com/images/I/81lrF8AR%2BtL._SX425_.jpg class="img-thumbnail rounded mx-auto d-block"/>
-
+      <div class="row">
+      <img src=https://images-na.ssl-images-amazon.com/images/I/81lrF8AR%2BtL._SX425_.jpg style="height: 200px" class="img-thumbnail rounded mx-auto d-block"/>
+      <img src=images\albums1.jfif style="height: 200px" class="img-thumbnail rounded mx-auto d-block">
+      <img src=images\albums2.jfif style="height: 200px" class="img-thumbnail rounded mx-auto d-block">
+    </div>
       <br>
       <p class="blockquote"> Verder vind ik het leuk om te coderen, en te werken met arduino. Dit heeft mij ervaring
         gegeven in C++
