--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
   <br>
   <br>
 
-  <div class="center container bg-dark rounded">
+  <div style="padding: 30px;" class="center container bg-dark rounded">
     <div class="text-light">
 
       <title>Profile</title>
