--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Dit is de website van Dave Elshout.</p>
         </div>
         <br>
-        <div class="center container bg-dark rounded">
+        <div style="padding: 20px;" class="center container bg-dark rounded">
           <div class="text-light">
             <div class="row">
               <div class="col-lg-6 col-md-4 col-sm-12">
