added 2 pages and made some visual changes.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="profile.html">Profile</a>
             <a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-item nav-link" href="motivation.html">Motivatie</a>
+            <a class="nav-item nav-link" href="profession.html">Professie</a>
             <a class="nav-item nav-link" href="faq.html">FAQ</a>
           </div>
         </div>
@@ -23,11 +25,12 @@
       <!--Navbar-->
 
         <div class="container">
+          <br>
             <h1>Welkom op de Home pagina!</h1>
             <p>Dit is de website van Dave Elshout.</p>
         </div>
         <br>
-        <div style="padding: 20px;" class="center container bg-dark rounded">
+        <div style="padding: 20px; border-radius: 25px;" class="center container bg-dark">
           <div class="text-light">
             <div class="row">
               <div class="col-lg-6 col-md-4 col-sm-12">
