--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,8 @@
         <a class="nav-item nav-link" href="index.html">Home </a>
         <a class="nav-item nav-link active" href="profile.html">Profile <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
+        <a class="nav-item nav-link" href="motivation.html">Motivatie</a>
+        <a class="nav-item nav-link" href="profession.html">Professie</a>
         <a class="nav-item nav-link" href="faq.html">FAQ</a>
       </div>
     </div>
@@ -31,7 +33,7 @@
   <br>
   <br>
 
-  <div style="padding: 30px;" class="center container bg-dark rounded">
+  <div style="padding: 30px; border-radius: 25px;" class="center container bg-dark">
     <div class="text-light">
 
       <title>Profile</title>
