--- a/dashboard.html
+++ b/dashboard.html
@@ -39,9 +39,9 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="index.html">Home</a>
           <a class="nav-item nav-link" href="profile.html">Profile</a>
-          <a class="nav-item nav-link active" href="dashboard.html"
-            >Dashboard <span class="sr-only">(current)</span></a
-          >
+          <a class="nav-item nav-link active" href="dashboard.html">Dashboard <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="motivation.html">Motivatie</a>
+          <a class="nav-item nav-link" href="profession.html">Professie</a>
           <a class="nav-item nav-link" href="faq.html">FAQ</a>
         </div>
       </div>
