--- a/faq.html
+++ b/faq.html
@@ -19,6 +19,8 @@
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="profile.html">Profile</a>
             <a class="nav-item nav-link" href="dashboard.html">Dashboard</a>
+            <a class="nav-item nav-link" href="motivation.html">Motivatie</a>
+            <a class="nav-item nav-link" href="profession.html">Professie</a>
             <a class="nav-item nav-link active" href="faq.html">FAQ<span class="sr-only">(current)</span></a>
           </div>
         </div>
