--- a/dashboard.html
+++ b/dashboard.html
@@ -108,6 +108,14 @@
           >
           <br /><br />
           <a
+            href="https://github.com/HZ-HBO-ICT"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Github van School</a
+          >
+          <br /><br />
+          <a
             href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf"
             target="_blank"
             style="text-decoration: none;"
