organised some things

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
       <title>Startpagina</title>
     <link
       rel="stylesheet"
@@ -314,6 +314,6 @@
         </div>
       </div>
     </div>
-      <script src="site.js"></script>
+      <script src="javascript/site.js"></script>
    </body>
 </html>
