--- a/dashboard.html
+++ b/dashboard.html
@@ -114,7 +114,15 @@
             class="button"
             >Github van School</a
           >
-          <br /><br />
+           <br /><br />
+          <a
+            href="https://justdave2002.github.io/basisschoolGame/"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Runner Game</a
+          >
+          <br /><br />https://justdave2002.github.io/basisschoolGame/
           <a
             href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf"
             target="_blank"
